fix: post date overflow

--- a/_css/custom.css
+++ b/_css/custom.css
@@ -80,7 +80,7 @@ code {
 
 .posts .post-date {
   display: inline-block;
-  width: 7.1rem;
+  width: 7.3rem;
 }
 
 .posts li {
